chore: build-logic changes and deps updates